Crossbrowser Fix:
    - Cover Not Aligned Properly on Safari but works on Other (Removed Cascading Padding)

--- a/resources/assets/less/uniform-builder.less
+++ b/resources/assets/less/uniform-builder.less
@@ -4465,10 +4465,11 @@ div.header-container.main {
 
             div.body {
 
-                padding: 30px;
                 font-size: 1.2em;
                 padding-top: 10px;
                 padding-left: 10px;
+                padding-right: 30px;
+                padding-bottom: 30px;
 
                 div.optionButton {
 
@@ -4512,9 +4513,9 @@ div.header-container.main {
                     background-color: #3d3d3d;
                     z-index: 1000;
                     opacity: 0.9;
-                    margin-left: -40px;
-                    margin-top: -20px;
-                    height: 372px;
+                    margin-left: -30px;
+                    margin-top: -10px;
+                    height: 392px;
 
                 }
 
